# marshmallow_gif

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  marshmallow_gif  marshmallow_gif.txt
form/: main_win.glade  main_win.glade~  qt_mainwindow.ui  qt_start_setup.ui  setting_win.glade~  start_setup.glade  start_setup.glade~
include/: app.hpp  config.hpp  gif.hpp  gtk_app.hpp  gtk_gif.hpp  gtk_start_setup.hpp  init.hpp  qt_mainwindow.hpp  qt_start_setup.hpp  setting.hpp  start_setup.hpp
lib/: list.hpp  queue.hpp  stack.hpp
marshmallow_gif_autogen/: mocs_compilation.cpp
marshmallow_gif_autogen/6YEA5652QU/: moc_qt_start_setup.cpp
marshmallow_gif_autogen/form/: ui_qt_start_setup.h
src/: app.cpp  config.cpp  gif.cpp  gtk_app.cpp  gtk_gif.cpp  gtk_setting.cpp  gtk_start_setup.cpp  init.cpp  init.cpp.autosave  main.cpp  qt_mainwindow.cpp  qt_start_setup.cpp  setting.cpp  start_setup.cpp
style/: main_marshmallow.css  main_oranje.css  main_system.css  opt_marshmallow.css  opt_oranje.css  start_setup_marshmallow.css  start_setup_oranje.css  start_setup_system.css
